--- a/src/assets/styles/pages/spa-swimming-pool-wn.scss
+++ b/src/assets/styles/pages/spa-swimming-pool-wn.scss
@@ -581,3 +581,31 @@
     }
   }
 }
+
+.parking__btn {
+  display: block;
+  width: fit-content;
+  margin-top: 20px;
+  @include text-style-general-style;
+  font-weight: 600;
+  text-transform: uppercase;
+  padding: 10px 18px;
+  background-color: $color-yellow;
+  color: $color-black;
+  border-radius: 20px;
+  transition: all 0.3s ease-in-out;
+
+  &:hover {
+    opacity: 0.7;
+  }
+
+  @include tablet {
+    padding: 15px 28px;
+    border-radius: 30px;
+  }
+
+  @include laptop {
+    padding: 20px 38px;
+    border-radius: 40px;
+  }
+}
